HDPI-774 - Responding to Scott's comments